--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>testes</title>
 </head>
 <body>
-	<h1>testing testing... Hello word</h1>
+	<h1>Testing... Hello word!</h1>
 </body>
 </html>
