--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">	
 </head>
+<style>
+    	* {
+		box-sizing: border-box; /*content-border*/
+		}
+    	h1 {
+
+    	}
+</style>
 <body>
 	<h1>Our Menu</h1>
 	<div class="container-fluid">
