--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <style>
     	* {
-		box-sizing: border-box; /*content-border*/
+		box-sizing: border-box; content-border
 		}
     	h1 {
-
+    	
     	}
 </style>
 <body>
